--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 @import './utilities/variables';
-@import "./utilities/date time section";
+@import './utilities/date time section';
 @import './utilities/buttons';
 @import './partials/serching-section';
 @import './partials/quote-section';
@@ -7,4 +7,4 @@
 @import './index/common';
 @import './utilities/history';
 @import './partials/Days5';
-@import './partials/chart';
+// @import './partials/chart';
